// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cart resolver case: 1`] = `
Object {
  "data": Object {
    "getCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: 2`] = `
Object {
  "data": Object {
    "addCategory": Object {
      "id": "1",
      "name": "My Category",
    },
  },
}
`;

exports[`cart resolver case: 3`] = `"My Book"`;

exports[`cart resolver case: 4`] = `"My Book"`;

exports[`cart resolver case: 5`] = `
Array [
  [GraphQLError: Already in Cart],
]
`;

exports[`cart resolver case: 6`] = `
Object {
  "data": Object {
    "addToCart": null,
  },
  "errors": Array [
    [GraphQLError: Item not found],
  ],
}
`;

exports[`cart resolver case: 7`] = `
Object {
  "data": Object {
    "addToCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: 8`] = `
Object {
  "data": Object {
    "removeFromCart": true,
  },
}
`;

exports[`cart resolver case: 9`] = `
Object {
  "data": Object {
    "removeFromCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: 10`] = `
Object {
  "data": Object {
    "removeFromCart": null,
  },
  "errors": Array [
    [GraphQLError: Item not found],
  ],
}
`;

exports[`cart resolver case: 11`] = `
Object {
  "data": Object {
    "emptyCart": null,
  },
  "errors": Array [
    [GraphQLError: Please login to continue],
  ],
}
`;

exports[`cart resolver case: 12`] = `
Object {
  "data": Object {
    "emptyCart": null,
  },
  "errors": Array [
    [GraphQLError: Empty],
  ],
}
`;

exports[`cart resolver case: 13`] = `
Object {
  "data": Object {
    "getCart": Array [],
  },
}
`;

exports[`cart resolver case: 14`] = `
Object {
  "slug": "my-book",
  "title": "My Book",
}
`;

exports[`cart resolver case: 15`] = `
Object {
  "data": Object {
    "emptyCart": true,
  },
}
`;
